@@ -659,8 +659,8 @@ sub list_access_check {
       }
     }
 
-#    use Data::Dumper;
-#    $log->message(450, "info", "Access variables: ". Dumper \%args);
+    use Data::Dumper;
+    $log->message(450, "info", "Access variables: ". Dumper \%args);
 
     @final_actions =
       process_rule(name     => 'access_rules',
@@ -1456,10 +1456,10 @@ sub _d_post {
      $tmp, $tmpl, $tmps);
   shift @_;
 
-  @consult_vars = 
-    qw(bad_approval body_length_exceeded dup_msg_id dup_checksum 
-       dup_partial_checksum global_taboo_body global_taboo_header 
-       limit_lower limit_soft max_header_length_exceeded
+  @consult_vars =
+    qw(bad_approval body_length_exceeded dup_msg_id dup_checksum
+       dup_partial_checksum global_taboo_body global_taboo_header
+       invalid_from limit_lower limit_soft max_header_length_exceeded
        mime_consult mime_header_length_exceeded post_block taboo_body
        taboo_header total_header_length_exceeded);
 
